--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "path": "^0.12.7",
     "pg": "^8.9.0",
     "postgres": "^3.3.3",
     "react": "^18.2.0",
